# humor

./: .gitignore  01_random_vs_brute_force.ipynb  README.md  StandUp_GroundTruth.ipynb  audio_times.py  gemma_answers.csv  makefile  pyproject.toml  standup_data.csv
data/: Chat_GPT_results - Sheet1.csv  Claude_results - Sheet1.csv
experiments/: 01_random_vs_brute_force.ipynb  02_phi_gemma_llama.ipynb  03_large_models.ipynb  04_prompt_engineering.ipynb  05_play_pretend.ipynb  06_pretend _with_large_models.ipynb  07_sanity_checks.ipynb  08_max_min.ipynb  09_human_agreement.ipynb  10_human_machine_agreement.ipynb  11_human_metric.ipynb  12_humor_types.ipynb  13_vector_similarity_scores.ipynb  14_vector_score_large_models.ipynb  15_large_vector_bipartite.ipynb  16_subspace.ipynb  17_audience_demo.ipynb  18_all_subspace.ipynb  19_all_models.ipynb  20_deepseek.ipynb
humor/: bipartite_metric.py  metric.py  subspace.py  vector_similarity.py  vectorization.py
linalg/: __init__.py  matrix.py  orthogonalization.py
notebooks/: 01_StandUp_GroundTruth.ipynb  02_gemma_responses.ipynb  03_stand.ipynb  04_base_metric_comparison.ipynb  05_prompt_engineering.ipynb  08_gemma2.ipynb  10_more_data.ipynb  11_decoding.ipynb  12_subspace_metric.ipynb  12_vector_similarities.ipynb  13_subspace_metric.ipynb  14_gemma2_diff_param.ipynb  15_spearman.ipynb  16_gemma2_audience_demo.ipynb  Copy_of_Tokenize.ipynb  StandUp_GroundTruth.ipynb  base_comapre.ipynb  base_metric_comparison.ipynb  data_ana.ipynb  decoding.ipynb  different_models.ipynb  gemma2.ipynb  gemma_responses.ipynb  gillis.ipynb  (+12 more)
(+174 files in other folders)
