[project]
name = "humor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.1",
    "hf-transfer>=0.1.8",
    "huggingface-hub[all,hf-transfer]>=0.26.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "transformers>=4.45.2",
]
