[project]
name = "humor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.1",
    "hf-transfer>=0.1.8",
    "huggingface-hub[all,hf-transfer]>=0.26.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "more-itertools>=10.5.0",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "pydantic>=2.9.2",
    "scipy>=1.14.1",
    "thefuzz>=0.22.1",
    "transformers>=4.45.2",
]
